--- a/src/style.css
+++ b/src/style.css
@@ -416,14 +416,14 @@ button, a, input, .sidebar-btn, .panel-toggle {
 }
 
 .action-btn {
-  min-width:170px;
+  min-width:150px;
   padding: 10px 16px;
   font-size: 14px;
-  font-weight: 600;
+  font-weight: 200;
   border-radius: 8px;
-  border: 1px solid rgba(255, 255, 255, 0.15);
-  background: rgba(255, 255, 255, 0.05);
-  color: rgba(255, 255, 255, 0.85);
+  border: 1px solid rgba(255, 255, 255, 0.035);
+  background: rgba(255, 255, 255, 0.013);
+  color: rgba(183, 208, 226, 0.85);
   cursor: pointer;
   pointer-events: auto;
   display: flex;
@@ -432,6 +432,13 @@ button, a, input, .sidebar-btn, .panel-toggle {
   gap: 8px;
   transition: all 0.2s ease;
   backdrop-filter: blur(4px);
+}
+
+@media (max-width: 768px) {
+  .action-btn {
+    flex-direction: row-reverse;
+    justify-content: space-between;
+  }
 }
 
 /* Landing buttons staggered fade/blur in */
@@ -461,9 +468,9 @@ button, a, input, .sidebar-btn, .panel-toggle {
 }
 
 .action-btn:hover {
-  border-color: rgba(255, 255, 255, 0.3);
-  background: rgba(255, 255, 255, 0.1);
-  color: rgba(255, 255, 255, 1);
+  border-color: rgba(94, 119, 157, 0.478);
+  background: rgba(84, 95, 103, 0.219);
+  color: rgb(189, 212, 228);
   box-shadow: 0 0 12px rgba(255, 255, 255, 0.15);
 }
 
@@ -1602,7 +1609,6 @@ button, a, input, .sidebar-btn, .panel-toggle {
   display: flex;
   flex-direction: column;
   gap: 8px;
-  margin-top: 8px;
 }
 
 .group-toggle {
@@ -1813,7 +1819,7 @@ select option {
 .mobile-sheet-content {
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 14px;
   padding: 0 14px 20px 14px;
   padding-bottom: max(20px, env(safe-area-inset-bottom));
   overflow-y: auto;
@@ -1829,6 +1835,7 @@ select option {
   justify-content: center;
   align-items: center;
   padding: 16px 0 12px 0;
+  margin-bottom: 8px;
   flex-shrink: 0;
 }
 
@@ -2639,6 +2646,7 @@ select option {
   align-items: center;
   justify-content: center;
   gap: 8px;
+  color: rgb(170, 188, 202);
 }
 
 .primary-button:hover:not(:disabled) {
@@ -3149,6 +3157,7 @@ select option {
 
 .source-action-btn {
   flex: 1;
+  min-width: 78px;
   padding: 6px 10px;
   background: rgba(255, 255, 255, 0.05);
   border: 1px solid rgba(255, 255, 255, 0.1);
