--- a/src/style.css
+++ b/src/style.css
@@ -2513,7 +2513,8 @@ select option {
 
 .controls-modal__scroll {
   overflow-y: auto;
-  padding-right: 4px;
+  padding-right: 12px;
+  margin-right: -12px;
 }
 
 .controls-section {
@@ -2557,7 +2558,7 @@ select option {
   opacity: 0.5;
 }
 
-.controls-section[open] .controls-section__chevron {
+.controls-section[open] > .controls-section__summary .controls-section__chevron {
   transform: rotate(90deg);
 }
 
